Fix blurred border of dialog box

--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -83,6 +83,7 @@ body {
     height: 5em;
     border: 10px solid transparent;
     border-image: url("speech_border.png") 10;
+    image-rendering: pixelated;
     font-size: 24px;
     border-radius: 10px;
     padding: 7px 7px 7px 14px;
